[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
db_client = {path = "../db_client"}
env_logger = "0.9"
juniper = "0.15.7"
juniper_warp = "0.7"
shrinkwraprs = "0.3.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
bytes = "1.3.0"
futures = "0.3.15"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]